recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: not found: value lenght
	avance(lenght);
               ^Koch:14: error: not found: value steps
	droite(360/steps);
                   ^Koch:15: error: not found: value lenght
	snowSide(levels-1, lenght:Double);
                           ^Koch:16: error: not found: value steps
	gauche(360/steps);
                   ^Koch:17: error: not found: value lenght
	recule(lenght);
               ^